# logagg

./: Cargo.toml
src/: cli.rs  docker_client.rs  lib.rs  log_discovery.rs  log_entry.rs  main.rs  tui.rs
